Add `revert-layer` to `isUniversalKeyword` https://bugs.webkit.org/show_bug.cgi?id=234674

Reviewed by Antti Koivisto.

* Source/WebCore/css/parser/CSSParserFastPaths.cpp:
(WebCore::isUniversalKeyword):

Canonical link: https://commits.webkit.org/250788@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294533 268f45cc-cd09-0410-ab3c-d52691b4dbfc